--- a/design/home.html
+++ b/design/home.html
@@ -8,6 +8,7 @@
     <meta name="author" content="" />
     <title>Scrivito Example App JS - Homepage</title>
     <base href="/" />
+    <script src="https://use.fontawesome.com/f177db0efd.js"></script>
     <link
       href="file:///Users/karolinazegan/source/scrivito_example_app_js/build/assets/index.css"
       rel="stylesheet"
@@ -33,6 +34,9 @@
                   alt=""
                 />
               </div>
+              <button class="navigation__toggle">
+                <i class="fa fa-bars"></i><a href="#"></a>
+              </button>
               <div class="navigation__menu">
                 <ul class="navigation__menu-list">
                   <li class="navigation__item"><a href="#">Home</a></li>
@@ -53,9 +57,7 @@
                   <li class="navigation__item"><a href="#">Shop</a></li>
                   <li class="navigation__item"><a href="#">Contact</a></li>
                 </ul>
-                <button class="navigation__toggle">
-                  <i class="fa fa-bars"></i><a href="#"></a>
-                </button>
+                
               </div>
             </div>
           </div>
@@ -72,7 +74,7 @@
               />
             </div>
             <div class="col-12 col-md header__main-description">
-              <h2>Balance Your Body and Mind</h2>
+              <h1>Balance Your Body and Mind</h1>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
                 veniam laborum ab, praesentium a soluta nostrum libero eligendi
@@ -260,7 +262,7 @@
         </div>
       </div>
     </section>
-    <section class="form">
+    <form class="form">
       <div class="container form__container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 text-center">
@@ -299,7 +301,7 @@ Message</textarea
           </div>
         </div>
       </div>
-    </section>
+    </form>
     <footer class="footer">
       <div class="container">
         <div class="row">
@@ -366,19 +368,16 @@ Message</textarea
     <script>
       // Toggle mobile menu
 
-      const toggle = document.querySelector(".navigation__toggle");
-      const menu = document.querySelector(".navigation__links");
+      const toggleButton = document.querySelector(".navigation__toggle")
+      const menu = document.querySelector(".navigation__container")
 
-      function toggleMenu() {
-        if (menu.classList.contains("open")) {
-          menu.classList.remove("open");
-          toggle.querySelector("a").innerHTML = "<i class='fa fa-bars'></i>";
-        } else {
-          menu.classList.add("open");
-          toggle.querySelector("a").innerHTML = "<i class='fa fa-times'></i>";
-        }
-      }
-      toggle.addEventListener("click", toggleMenu, false);
+      toggleButton.addEventListener("click", function(){
+        console.log("dziala")
+        menu.classList.toggle("is-show")
+        console.log(menu)
+      })
+
+   
     </script>
   </body>
 </html>
