--- a/design/training.html
+++ b/design/training.html
@@ -8,6 +8,7 @@
     <meta name="author" content="" />
     <title>Scrivito Example App JS - Homepage</title>
     <base href="/" />
+    <script src="https://use.fontawesome.com/f177db0efd.js"></script>
     <link
       href="file:///Users/karolinazegan/source/scrivito_example_app_js/build/assets/index.css"
       rel="stylesheet"
@@ -33,6 +34,9 @@
                   alt=""
                 />
               </div>
+              <button class="navigation__toggle">
+                <i class="fa fa-bars"></i><a href="#"></a>
+              </button>
               <div class="navigation__menu">
                 <ul class="navigation__menu-list">
                   <li class="navigation__item">
@@ -55,9 +59,6 @@
                   <li class="navigation__item"><a href="#">Shop</a></li>
                   <li class="navigation__item"><a href="#">Contact</a></li>
                 </ul>
-                <button class="navigation__toggle">
-                  <i class="fa fa-bars"></i><a href="#"></a>
-                </button>
               </div>
             </div>
           </div>
@@ -87,7 +88,7 @@
       </header> -->
     </section>
     <section class="video">
-      <div class="container video__container training">
+      <div class="container video__container-training">
         <div class="row">
           <div class="col-12 col-md">
             <img
@@ -96,7 +97,7 @@
             />
           </div>
           <div class="col-12 col-md video__description">
-            <h3 class="video__title">yoga training video showreel</h3>
+            <h1 class="video__title">yoga training video showreel</h1>
             <p class="video__main-text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
               vitae voluptatum molestiae laboriosam, maxime mollitia totam.
@@ -173,5 +174,16 @@
         </div>
       </div>
     </footer>
+    <script>
+      // Toggle mobile menu
+      const toggleButton = document.querySelector(".navigation__toggle")
+      const menu = document.querySelector(".navigation__container")
+
+      toggleButton.addEventListener("click", function(){
+        console.log("dziala")
+        menu.classList.toggle("is-show")
+        console.log(menu)
+      })
+    </script>
   </body>
 </html>
